--- a/databuilder/Importer.ipynb
+++ b/databuilder/Importer.ipynb
@@ -166,7 +166,8 @@
    "cell_type": "code",
    "execution_count": 142,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -315,7 +316,7 @@
    },
    "outputs": [],
    "source": [
-    "standard_cells = ['Race', 'Race_level', 'Location', 'Location_level']\n",
+    "standard_cells = ['Race', 'Race_type', 'Location', 'Location_type', 'Income', 'Income_type']\n",
     "data_categories = []\n",
     "measure_categories = ['Gender','Measure']"
    ]
@@ -1488,34 +1489,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F_NATDEN\n",
-      "M_NATDEN\n",
-      "NATDEN\n"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-11-40ebddecd809>, line 23)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-40ebddecd809>\"\u001b[0;36m, line \u001b[0;32m23\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
    "source": [
-    "for index, g in group.iterrows():\n",
-    "    print(g['Code'])"
+    "class MeasureSet(object):\n",
+    "    self.name = ''\n",
+    "    \n",
+    "\n",
+    "class MeasureSetFactory(object):\n",
+    "    \n",
+    "    def __init__(self, data_categories = [], measure_categories = [], standard_categories = ['Race', 'Race_type', 'Location', 'Location_type', 'Income', 'Income_type']):\n",
+    "        self.standard_categories = standard_categories\n",
+    "        self.data_categories = []\n",
+    "        self.measure_categories = []\n",
+    "        self.all_categories = standard_cells + data_categories + measure_categories\n",
+    "        \n",
+    "        self.measures = []\n",
+    "    \n",
+    "    def import_measures_from_excel(excel_path):\n",
+    "        data = pd.read_excel(io=excel_path, sheetname=\"Data\")\n",
+    "        full_data = self.data_with_extra_columns(data)\n",
+    "        \n",
+    "        measures = pd.read_excel(io=excel_path, sheetname=\"Measures\")\n",
+    "        measures = measures.fillna('')\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    def data_with_extra_columns(data):\n",
+    "        full_data = data\n",
+    "        length = len(full_data['Race'])\n",
+    "        for mc in measure_categories:\n",
+    "            full_data[mc] = pd.Series(np.zeros(length))\n",
+    "        return full_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Race', 'Race_type', 'Location', 'Location_type', 'Income', 'Income_type']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importer = Importer()\n",
+    "importer.standard_categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['angel', 'pig', 'atrocious']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
