--- a/databuilder/DataImporter.ipynb
+++ b/databuilder/DataImporter.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -188,7 +188,7 @@
        "[3 rows x 30 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +252,7 @@
        "2  1995  Unemployment in the labour force  1995      Year"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -294,7 +294,7 @@
        " 'Age Bracket']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -439,7 +439,7 @@
        "[3 rows x 34 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,29 +455,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Measure</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Time_type</th>\n",
+       "      <th>Race</th>\n",
+       "      <th>Race_type</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Location_type</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Income_type</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age Bracket</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['Code',\n",
-       " 'Measure',\n",
-       " 'Time',\n",
-       " 'Time_type',\n",
-       " 'Race',\n",
-       " 'Race_type',\n",
-       " 'Location',\n",
-       " 'Location_type',\n",
-       " 'Income',\n",
-       " 'Income_type',\n",
-       " 'Gender',\n",
-       " 'Age Bracket']"
+       "Empty DataFrame\n",
+       "Columns: [Code, Measure, Time, Time_type, Race, Race_type, Location, Location_type, Income, Income_type, Gender, Age Bracket, Value]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -625,7 +642,7 @@
        "4       Country                                   16+  0.321  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,6 +662,137 @@
     "            results = results.append(tmp_results)\n",
     "    \n",
     "results.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from factories.DataFrameImporter import DataFrameImporter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "importer = DataFrameImporter()\n",
+    "\n",
+    "education_excel_file = '../data/datasets/education_ks4_attainment.xlsx'\n",
+    "education_data_page_categories = ['Race', 'Race_type', 'Location', 'Location_type', 'Income', 'Income_type', 'Time', 'Time_type']\n",
+    "\n",
+    "dataframe = importer.import_data_frame(education_excel_file, education_data_page_categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dataframe.to_csv('../data/education.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method import_data_frame in module factories.DataFrameImporter:\n",
+      "\n",
+      "import_data_frame(excel_file:str, data_page_categories=[], data_page='Data', measures_page='Measures') -> pandas.core.frame.DataFrame method of factories.DataFrameImporter.DataFrameImporter instance\n",
+      "    :param excel_file: path to an excel file\n",
+      "    :param data_page_category_columns: the category columns to be taken out of the data sheet\n",
+      "    :param data_page: the name of the data page in the excel workbook\n",
+      "    :param measures_page: the name of the measures page in the excel workbook\n",
+      "    :return: a pd dataframe of form [measure_code, measure_categories ..., data_categories ..., measure_value]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(importer.import_data_frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'read'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-f452b2b09283>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'client_secret.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/Tom.Ridd/anaconda/lib/python3.6/json/__init__.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(fp, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    294\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m     \"\"\"\n\u001b[0;32m--> 296\u001b[0;31m     return loads(fp.read(),\n\u001b[0m\u001b[1;32m    297\u001b[0m         \u001b[0mcls\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobject_hook\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mobject_hook\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m         \u001b[0mparse_float\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparse_float\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparse_int\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparse_int\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'read'"
+     ]
+    }
+   ],
+   "source": [
+    "json.load(fp = 'client_secret.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'installed': {'auth_provider_x509_cert_url': 'https://www.googleapis.com/oauth2/v1/certs',\n",
+       "  'auth_uri': 'https://accounts.google.com/o/oauth2/auth',\n",
+       "  'client_id': '232946787511-b4u3vsi7ladn0reocapvdmfkj2s8dq5b.apps.googleusercontent.com',\n",
+       "  'client_secret': '9XFY75donquvU5ptJPlDA2ko',\n",
+       "  'project_id': 'genial-caster-161415',\n",
+       "  'redirect_uris': ['urn:ietf:wg:oauth:2.0:oob', 'http://localhost'],\n",
+       "  'token_uri': 'https://accounts.google.com/o/oauth2/token'}}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('client_secret.json') as data_file:    \n",
+    "    data = json.load(data_file)\n",
+    "    \n",
+    "data"
    ]
   },
   {
